tools/tests/errors/assert_failure.experr
uncaught exception: one is not two
